--- a/app/assets/stylesheets/debates.css.scss
+++ b/app/assets/stylesheets/debates.css.scss
@@ -10,7 +10,8 @@
 	margin-top:20px;
 	margin-left:62px;
 	margin-bottom: 30px;
-	
+
+		
 		.image1{
 		background-color: #C9C9C9;
 		height:222px;
@@ -18,14 +19,20 @@
 		margin-top:20px;
 		margin-left:15px;
 		
+		img {
+		    filter: url(filters.svg#grayscale); /* Firefox 3.5+ */
+		    filter: gray; /* IE6-9 */
+		    -webkit-filter: grayscale(1); /* Google Chrome, Safari 6+ & Opera 15+ */
+		}
+		
+
+				
 			.image{
-			img { width: 374px; height:222px;}
+			margin-top: -241px;
+			img { width: 374px; height:222px;
+			}
 				position:relative;
 				z-index: 1;
-			}
-			.image2{
-			margin-top:-244px;
-
 			}
 			
 		#stats2{
