--- a/app/views/groups/index.html.erb
+++ b/app/views/groups/index.html.erb
@@ -6,7 +6,7 @@
 				Index des troupeaux
 			</div>
 			<div class="text2">
-			<%= link_to "créér un groupe", new_group_path, class: "text1"%>
+			<%= link_to "Créer un groupe", new_group_path, class: "text3"%>
 			</div>
 		</div>
 		
