--- a/app/assets/stylesheets/application.css.scss.erb
+++ b/app/assets/stylesheets/application.css.scss.erb
@@ -162,19 +162,51 @@ input.ajust-input, textarea.ajust-input {
 		background-color:#C9C9C9;
 		margin-bottom:15px;
 		
+		.image:hover {
+		    img{
+			filter: none;
+		    -webkit-filter: grayscale(0);
+			}
+		}
+		
+		.image{
+			img {
+			    filter: url(filters.svg#grayscale); /* Firefox 3.5+ */
+			    filter: gray; /* IE6-9 */
+			    -webkit-filter: grayscale(1); /* Google Chrome, Safari 6+ & Opera 15+ */
+			}
+			
+			img:hover {
+			    filter: none;
+			    -webkit-filter: grayscale(0);
+			}
+			
+			img { width: 470px; height:128px;
+			}
+			position:relative;
+			z-index: 0;
+		}
 		#debate-badge2{
-		padding-left: 30px;
-		padding-top: 40px;
+
+		.image{
+			margin-top: -140px;
+			margin-left: 50px;
+		}
+		
+		position:relative;
+		z-index: 1;
 		}
 		
 		.texte{
-		width:350px;
-		margin-top:10px;
-		margin-left:-11px;
 		
+		width:350px;
+		margin-top:-135px;
+		margin-left:109px;
+		position:relative;
+		z-index: 1;
 	   	 .title{
 		 width: 300px;
-		margin-top:-100px;
+		margin-top:-95px;
 		margin-bottom:3px;
 		margin-left:25px;
 	   	 text-align: center;
@@ -189,7 +221,7 @@ input.ajust-input, textarea.ajust-input {
 			}	
 	   	 }
 	   	 .context{
-			margin-top:10px;
+			margin-top:7px;
 			width: 300px;
 			margin-left: 25px;
 	   	 	text-align:left;
@@ -269,9 +301,35 @@ input.ajust-input, textarea.ajust-input {
 		background-color:#C9C9C9;
 		margin-bottom:15px;
 		
+		.image:hover {
+		    img{
+			filter: none;
+		    -webkit-filter: grayscale(0);
+			}
+		}
+		
+		.image{
+			img {
+			    filter: url(filters.svg#grayscale); /* Firefox 3.5+ */
+			    filter: gray; /* IE6-9 */
+			    -webkit-filter: grayscale(1); /* Google Chrome, Safari 6+ & Opera 15+ */
+			}
+			
+			img:hover {
+			    filter: none;
+			    -webkit-filter: grayscale(0);
+			}
+			
+			img { width: 470px; height:128px;
+			}
+			position:relative;
+			z-index: 0;
+		}
 		#challenge-badge2{
 		padding-left: 30px;
-		padding-top: 40px;
+		margin-top: -80px;
+		position:relative;
+		z-index: 1;
 		}
 		
 		.jugeoubref{
@@ -317,9 +375,11 @@ input.ajust-input, textarea.ajust-input {
 
 		}
 		.texte{
+			position:relative;
+			z-index: 1;
 		width:360px;
-		margin-top:12px;
-		margin-left:-15px;
+		margin-top:-115px;
+		margin-left:100px;
 		text-align: center;
 		
 	   	 .title{
@@ -328,9 +388,12 @@ input.ajust-input, textarea.ajust-input {
 	   	 text-align: center;
 	   	 font-family:"gotham";
 	   	 font-size:18px;
+		background-color: black;
 	
 			.title2{
 				color:black;
+				position:relative;
+				z-index: 1;
 			}
 			.title:hover{
 				text-decoration: underline;
