--- a/app/assets/stylesheets/users.css.scss
+++ b/app/assets/stylesheets/users.css.scss
@@ -110,17 +110,22 @@
 #profile-header{
 	margin-top: 17px;
 	margin-bottom: 40px;
-	font-family: "georgia";
-	font-style: italic;
-	font-weight: bold;
+	font-family: "gotham";
+	margin-left: 40px;
+	margin-right: 45px;
 	font-size: 20px;
-	margin-left:200px;
+	padding-bottom: 20px;
+	border-bottom: $borderDashed;
 
+	.notifications-profile{
+	margin-left: 140px;
+	}
 	
 	li {
       display: inline-block;
-	  padding-right: 20px;
+	  margin-right: 30px;
 			cursor : pointer;
+	padding:5px 15px;
 
     }
 	
@@ -130,8 +135,14 @@
 	}
   
     li.active, li:hover {
-		text-decoration:underline;
+		background-color: #AAD0FF;
+		color: black;
     }
+
+	.text3{
+	color: #000;
+	text-decoration:none;
+	}
 }
 
 #profile-badge{
