--- a/app/views/challenges/show.html.erb
+++ b/app/views/challenges/show.html.erb
@@ -304,7 +304,7 @@
 		<%end%>
 		<div class="espace"></div>
 		
-		
+					<div class="span3 offset4"><%= link_to "Pour réagir, il faut se connecter", new_session_path(resource_name)%></div>
 		<div class='row'>
 			<div class="row" id="comments-to-close">
 				<% if @challenge.comments.any?%> 
@@ -323,7 +323,7 @@
 			<% if current_user %>
 			<div class="row"><%= render "shared/comment_form", commentable: @challenge, type: Challenge, comment: @challenge.comments.new%></div>
 			<%else%>
-			<div class="span3 offset4"><%= link_to "Pour réagir, il faut se connecter", new_sessions_path(resource_name)%></div>
+
 			<% end %>
 			
 			<div class="row" id ="openning-comments">
