--- a/app/views/debates/show.html.erb
+++ b/app/views/debates/show.html.erb
@@ -9,8 +9,9 @@
 					<div class="span5" id="gauche-ouvert">
 						
 					    <div class="image1">	
+							<%= link_to image_tag(@debate.avatar.url(:medium)), @debate, class: "image"%>
 							<%= image_tag("ouvert-image.png", alt: "Moutoners", class: "image")%>							
-							<%= image_tag("imageod.png", alt: "Moutoners", class: "image2")%>
+
 							<div id="stats2">								
 
 								<% if @debate.evaluations.any?%>
