--- a/app/views/shared/_debate_badge.html.erb
+++ b/app/views/shared/_debate_badge.html.erb
@@ -1,9 +1,10 @@
 <section id="debate-badge">
   		<div class="row">
 			<div class="span7" id="debate-badge1">
+				<%= link_to image_tag(debate.avatar.url(:medium)), debate, class: "image"%>
 				<div class="row">
-					<div class="span1" id="debate-badge2">
-						<%= image_tag("signe-ouvert.png", alt: "Moutoners")%>
+					<div id="debate-badge2">
+						<%= image_tag("signe-ouvert.png", alt: "Moutoners", class: "image")%>
 					</div>
 					
 					<div class="span4">
