--- a/app/views/users/_profile_header.html.erb
+++ b/app/views/users/_profile_header.html.erb
@@ -1,47 +1,41 @@
 <ul class ="row" id ="profile-header">
 	<% if current_user && current_user == @user%>
 		<li class="notifications-profile">
-			<%= link_to "Notifications", notifications_user_path(@user)%>
+			<%= link_to "Notifications", notifications_user_path(@user), class: "text3"%>
 			</li>
 		
-    	<li class="tiret">|</li>
 
 		<li class= "boutons-pending">
 
-			<%= link_to "En Cours", active_user_path(@user)%>
+			<%= link_to "En Cours", active_user_path(@user), class: "text3"%>
 		</li>
 		
-		<li class="tiret">|</li>
 		
 		<li class="bouttons-profile">
-			<%= link_to "Mes Groupes", my_groups_user_path(@user)%>
+			<%= link_to "Mes Groupes", my_groups_user_path(@user), class: "text3"%>
 		</li>
 
-		<li class="tiret">|</li>
 
 		<li class="bouttons-profile">
-			<%= link_to "Mon Activité", activities_user_path(@user)%>
+			<%= link_to "Mon Activité", activities_user_path(@user), class: "text3"%>
 		</li>
 		
 	<% else %>
 
-		<li class="bouttons-profile">
+		<li class="notifications-profile">
 			Son Activité
 		</li>
 	
-  		<li class="tiret">|</li>
 		
-		<li class="notifications-profile">
+		<li class="bouton-profile">
 			Ses Votes
 		</li>
 
-    	<li class="tiret">|</li>
     	
 		<li class= "boutons-pending">
 			Ses Défis
 		</li>
     	
-    	<li class="tiret">|</li>
     	
 		<li class="bouttons-profile">
 			Ses Débats Ouverts
