--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -83,7 +83,7 @@
 				</div>
 				<div class ="row", id="debat-nav">
 					<div id="apprendre">
-			        	  <%= link_to "Apprendre à débattre", apprendre_path, class: "apprendre" %>
+			        	  <%= link_to "Devenir un Mouton", abonnements_path, class: "apprendre" %>
 					</div>
 				</div>
 				<div class ="row" id="search">
