--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -133,7 +133,7 @@
 	</div>
 	
 	   <div id="best-debates4">
-	   	Voir tous les débats
+	   	<%= link_to ("Voir tous les débats"), list_path%>
 	   </div>
 		
   </div>
