--- a/app/assets/stylesheets/static.css.scss
+++ b/app/assets/stylesheets/static.css.scss
@@ -704,3 +704,77 @@ text-align: center;
   margin-left: 470px;
   }
 }
+
+#erreurs{
+
+#intro{
+	font-family: "georgia";
+	font-size: 16px;
+	font-style: italic;
+	font-weight: bold;
+	margin-top:23px;
+	width:1060px;
+	margin-left: 20px;
+	text-align: center;
+}
+
+#intro2{
+	font-family: "gotham";
+	font-size: 36px;
+	width:600px;
+	text-align: center;
+	margin-top: 40px;
+	margin-left: 242px;
+	line-height: 40px;
+}
+
+#petit-abo{
+height: 350px;
+width: 600px;
+border-radius: 13px;
+background-color: #AAD0FF;
+margin-top: 20px;
+margin-left: 242px;
+
+.cadre13{
+height: 310px;
+width: 560px;
+border-radius: 13px;
+background-color: #FFF;
+margin-left: 20px;
+margin-top: 20px;
+position: relative;
+z-index: 1;
+
+	.titre{
+	font-family: "gotham";
+	font-size: 36px;
+	text-align: left;
+	padding-top: 100px;
+	padding-bottom: 30px;
+	border-bottom: 1px dashed;
+	margin-left: 70px;
+	margin-right: 70px;
+	}
+	
+	.sous-titre{
+	font-family: "gotham";
+	font-size: 16px;
+	font-weight: bold;
+	padding-top:20px;
+	text-align: left;
+	padding-left: 70px;
+	
+	}
+}
+
+}
+
+#photo-abonnement{
+width: 110px;
+margin-top: 35px;
+margin-left: 470px;
+}
+
+
+}
