--- a/app/assets/stylesheets/static.css.scss
+++ b/app/assets/stylesheets/static.css.scss
@@ -30,16 +30,11 @@ text-align: center;
 	margin-left: 300px;
     background-color: #FFF;
 		
-		.image{
-		margin-top: -80px;
+		.fleche01{
+		margin-top: -10px;
 		float: right;
-		margin-right: 20px;
-		}
-		
-		.image1{
-		margin-top: -80px;
-		float: left;
-		margin-left: 20px;
+		margin-right: 25px;
+		cursor: pointer;
 		}
 		
 		.introduction1{
@@ -62,13 +57,88 @@ text-align: center;
 		}
 	}
 	
-	#video1{
+	#video01{
 	width: 550px;
 	height: 358px;
 	margin-top: - 378px;
 	margin-left: 300px;
     background-color: #FFF;
-
+		
+		.fleche02{
+		margin-top: -10px;
+		float: right;
+		margin-right: 25px;
+		cursor: pointer;
+		}
+		
+		.introduction1{
+		margin-left: 70px;
+		margin-right: 70px;
+		padding-top: 90px;
+		font-family: "gotham";
+		font-size: 36px;
+		line-height: 36px;
+		padding-bottom: 40px;
+		border-bottom: 2px dashed black;
+		}
+		.texte2{
+		margin-left: 70px;
+		margin-right: 70px;
+		padding-top: 30px;
+		font-family: "gotham";
+		font-size: 16px;
+		font-weight	: bold;
+		}
+	}
+	
+	#video02{
+	width: 550px;
+	height: 358px;
+	margin-top: - 378px;
+	margin-left: 300px;
+    background-color: #FFF;
+		
+		.fleche03{
+		margin-top: -10px;
+		float: right;
+		margin-right: 25px;
+		cursor: pointer;
+		}
+		
+		.introduction1{
+		margin-left: 70px;
+		margin-right: 70px;
+		padding-top: 90px;
+		font-family: "gotham";
+		font-size: 36px;
+		line-height: 36px;
+		padding-bottom: 40px;
+		border-bottom: 2px dashed black;
+		}
+		.texte2{
+		margin-left: 70px;
+		margin-right: 70px;
+		padding-top: 30px;
+		font-family: "gotham";
+		font-size: 16px;
+		font-weight	: bold;
+		}
+	}
+	
+	#video03{
+	width: 550px;
+	height: 358px;
+	margin-top: - 378px;
+	margin-left: 300px;
+    background-color: #FFF;
+		
+		.fleche04{
+		margin-top: -10px;
+		float: right;
+		margin-right: 25px;
+		cursor: pointer;
+		}
+		
 		.introduction1{
 		margin-left: 70px;
 		margin-right: 70px;
@@ -150,14 +220,177 @@ text-align: center;
 		
 	}
 	
-	#video_3{	
+	#video2_0{	
 	width: 640px;
 	height: 350px;
 	margin-top: - 353px;
 	margin-left: 210px;
     background-color: #FFF;
-	}
+
+		.fleche10{
+		margin-top: -10px;
+		float: right;
+		margin-right: 25px;
+		cursor: pointer;
+		}
 		
+		.intro{
+		margin-left: 70px;
+		padding-top: 30px;
+		font-family: "gotham";
+		font-size: 20px;
+		line-height: 36px;
+		}
+		
+		
+		.introduction1{
+		margin-left: 70px;
+		margin-right: 70px;
+		padding-top: 40px;
+		font-family: "gotham";
+		font-size: 36px;
+		line-height: 36px;
+		padding-bottom: 40px;
+		border-bottom: 2px dashed black;
+		}
+		.texte2{
+		margin-left: 70px;
+		margin-right: 70px;
+		padding-top: 30px;
+		font-family: "gotham";
+		font-size: 16px;
+		font-weight	: bold;
+		}
+	}
+	
+	#video2_01{	
+	width: 640px;
+	height: 350px;
+	margin-top: - 353px;
+	margin-left: 210px;
+    background-color: #FFF;
+
+		.fleche11{
+		margin-top: -10px;
+		float: right;
+		margin-right: 25px;
+		cursor: pointer;
+		}
+		
+		.intro{
+		margin-left: 70px;
+		padding-top: 30px;
+		font-family: "gotham";
+		font-size: 20px;
+		line-height: 36px;
+		}
+		
+		
+		.introduction1{
+		margin-left: 70px;
+		margin-right: 70px;
+		padding-top: 40px;
+		font-family: "gotham";
+		font-size: 36px;
+		line-height: 36px;
+		padding-bottom: 40px;
+		border-bottom: 2px dashed black;
+		}
+		.texte2{
+		margin-left: 70px;
+		margin-right: 70px;
+		padding-top: 30px;
+		font-family: "gotham";
+		font-size: 16px;
+		font-weight	: bold;
+		}
+	}
+	
+	#video2_02{	
+	width: 640px;
+	height: 350px;
+	margin-top: - 353px;
+	margin-left: 210px;
+    background-color: #FFF;
+
+		.fleche12{
+		margin-top: -10px;
+		float: right;
+		margin-right: 25px;
+		cursor: pointer;
+		}
+		
+		.intro{
+		margin-left: 70px;
+		padding-top: 30px;
+		font-family: "gotham";
+		font-size: 20px;
+		line-height: 36px;
+		}
+		
+		
+		.introduction1{
+		margin-left: 70px;
+		margin-right: 70px;
+		padding-top: 40px;
+		font-family: "gotham";
+		font-size: 36px;
+		line-height: 36px;
+		padding-bottom: 40px;
+		border-bottom: 2px dashed black;
+		}
+		.texte2{
+		margin-left: 70px;
+		margin-right: 70px;
+		padding-top: 30px;
+		font-family: "gotham";
+		font-size: 16px;
+		font-weight	: bold;
+		}
+	}
+	
+	#video2_03{	
+	width: 640px;
+	height: 350px;
+	margin-top: - 353px;
+	margin-left: 210px;
+    background-color: #FFF;
+
+		.fleche13{
+		margin-top: -10px;
+		float: right;
+		margin-right: 25px;
+		cursor: pointer;
+		}
+		
+		.intro{
+		margin-left: 70px;
+		padding-top: 30px;
+		font-family: "gotham";
+		font-size: 20px;
+		line-height: 36px;
+		}
+		
+		
+		.introduction1{
+		margin-left: 70px;
+		margin-right: 70px;
+		padding-top: 40px;
+		font-family: "gotham";
+		font-size: 36px;
+		line-height: 36px;
+		padding-bottom: 40px;
+		border-bottom: 2px dashed black;
+		}
+		.texte2{
+		margin-left: 70px;
+		margin-right: 70px;
+		padding-top: 30px;
+		font-family: "gotham";
+		font-size: 16px;
+		font-weight	: bold;
+		}
+	}	
     #hero {
 			
       > div {
