--- a/app/assets/stylesheets/challenges.css.scss
+++ b/app/assets/stylesheets/challenges.css.scss
@@ -213,7 +213,7 @@
 				}
 				
 					.description{
-					height: 124px;
+					height: 157px;
 					background-color: white;
 					border: none;
 					font-family: "georgia";
@@ -234,7 +234,7 @@
 					font-style: italic;
 					font-weight: bold;
 					width: 370px;
-					background-color: red;
+					background-color: #AAD0FF;
 					height: 30px;
 					margin-top: 3px;
 					
@@ -272,7 +272,7 @@
 					}
 
 					#tags_challenge{
-					margin-top: 8px;
+					margin-top: 1px;
 					width: 370px;
 					margin-left:0px;
 
@@ -290,7 +290,7 @@
 						font-style: italic;
 						color: black;
 						font-size: 16px;
-						height: 30px;
+						height: 34px;
 						width: 350px;
 						}
 					}
@@ -308,7 +308,7 @@
 				font-size: 22px;
 				width: 370px;
 				padding-top: 0px;
-				height:30px;
+				height:34px;
 				}
 				}
 			}
