--- a/app/assets/stylesheets/comments.css.scss
+++ b/app/assets/stylesheets/comments.css.scss
@@ -85,6 +85,7 @@
 		
 		#stats-comments{
 		margin-left: 10px;
+		margin-bottom: 10px;
 		font-family: "bebasneue-font";
 		font-size: 27px;
 			.texte{
@@ -95,7 +96,7 @@
 	}
 
 	
-	#content{
+	#comment-form{
 	word-wrap:break-word;
 	width: 440px;
 	margin-left: 5px;
