--- a/app/views/challenges/new.html.erb
+++ b/app/views/challenges/new.html.erb
@@ -8,7 +8,7 @@
 		<%= render "challenges/form", challenge: @challenge, value: nil%>
 		
 		<div class="row" id="intro-newchallenge2">
-			<div class="texte1"><%= ["Discussion. Moyen de confirmer les autres dans leurs erreurs", "Elever très haut le débat est une façon élégante de le perdre de vue.", "Je n'ai fait cette lettre plus longue que parce que je n'ai pas eu le temps de la faire plus courte", "Dans une discussion, vous avez toujours de votre côté des gens dont vous auriez préféré qu'ils soient de l'autre."].shuffle.first%></div>
+			<div class="texte1"><%= ["Discussion. Moyen de confirmer les autres dans leurs erreurs.", "Elever très haut le débat est une façon élégante de le perdre de vue.", "Je n'ai fait cette lettre plus longue que parce que je n'ai pas eu le temps de la faire plus courte", "Dans une discussion, vous avez toujours de votre côté des gens dont vous auriez préféré qu'ils soient de l'autre."].shuffle.first%></div>
 
 		</div>
 		
