--- a/app/views/shared/_argument_neutre_badge.html.erb
+++ b/app/views/shared/_argument_neutre_badge.html.erb
@@ -44,7 +44,7 @@
 
 
 							  <%= image_tag("box-texte.png", class: "box")%>
-							  <%= image_tag("vote-oui.png", class: "oui")%>	
+							  <%= image_tag("vote-suisse.png", class: "oui")%>	
 									
 							  <div class='toggleOpen'>Lire la suite...</div>								
 	                 		</div>
