--- a/app/views/errors/not_found.html.erb
+++ b/app/views/errors/not_found.html.erb
@@ -11,7 +11,7 @@
       <div class="span4" id ="petit-abo">
 		<div class="cadre13">
 			<div class="titre">
-			Erreur 404.
+			Erreur 404
 			</div>
 			<div class="sous-titre">
 			<%= (["Ce n'est pas là. Enfin, ça y'est plus. Bref.","Sarah conner? C'est à coté","Eh Oui. Vous êtes une brebis égarée."]).shuffle.first%>
