--- a/app/views/errors/server_error.html.erb
+++ b/app/views/errors/server_error.html.erb
@@ -31,10 +31,10 @@
       <div class="span4" id ="petit-abo">
 		<div class="cadre13">
 			<div class="titre">
-			Erreur 500.
+			Erreur 500
 			</div>
 			<div class="sous-titre">
-			<%= (["La bergerie est pleine. Trop de moutons.","Le serveur a laché. Notre meilleur agent est sur le coup.","Les serveurs: le pire ennemi des startups."]).shuffle.first%>
+			<%= (["Surcharge de serveurs. Trop de moutons dans la bergerie.","Le serveur a laché. Notre meilleur agent est sur le coup.","Les serveurs: le pire ennemi des startups."]).shuffle.first%>
 			</div>
 		</div>
 	  </div>
