--- a/app/views/challenges/_form.html.erb
+++ b/app/views/challenges/_form.html.erb
@@ -64,6 +64,7 @@
 				</div>
 
 				<div class="row" id="tags_challenge">
+					<%= f.hidden_field :jugebreve, :value => 0 %>
 					<%= f.text_field :tag_list, class: "tags", placeholder: "Tag1, Tag2, Tag3 ..."%>
 				</div>
 				<div class="row" id='submit-challenge'>
